# cdir

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  cdir_funcs.sh  dist-workspace.toml  index.html  install.sh  mkdocs.yml  rustfmt.toml  style.css
.github/workflows/: ci.yml  mkdocs.yaml
dbschema/: 0.sql  1.sql  2.sql  3.sql  current.sql
docs/: commands.md  configuration.md  features.md  gui.md  import_export.md  importing_shortcuts.md  index.md  installation.md  license.md  merged.cast  navigation.md  prompt.md
docs/javascripts/: extra.js
docs/stylesheets/: extra.css
src/: config.rs  config_button.rs  config_view.rs  confirmation.rs  expimp.rs  expimp_tests.rs  gui.rs  gui_tests.rs  help.rs  history_view_container.rs  list_indicator_view.rs  main.rs  model.rs  model_tests.rs  search_text_view.rs  shortcut_editor.rs  shortcut_view_container.rs  store.rs  store_tests.rs  tableview.rs  text_to_ansi.rs  theme.rs
src/tui/: event.rs  event_tests.rs  managed_view.rs  mod.rs  view.rs  view_builder.rs  view_manager.rs  view_manager_tests.rs
templates/: cdir_funcs.sh  config.yaml  log4rs.yaml
themes/: dark-blue.yaml  dark.yaml  default.yaml  light-autumn.yaml  light-joy.yaml  pure.yaml  winter.yaml
