[package]
name = "cdir"
version = "0.0.10"
edition = "2024"
repository = "https://github.com/AmadeusITGroup/cdir"

[dependencies]
chrono = { version = "0.4.42", features = ["clock"] }
clap = { version = "4.5.48", features = ["derive"] }
color-eyre = "0.6.5"
crossterm = "0.28.1"
log = "0.4.22"
ratatui = "0.29.0"
rusqlite = { version = "0.37.0", features = ["bundled"] }
tempfile = "3.14.0"
dirs = "5.0.1"
log4rs = "1.3.0"
serde = "1.0.216"
serde_yaml = "0.9.34"
tui-textarea = "0.7.0"
dark-light = "2.0.0"
nucleo-matcher = "0.3.1"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

