[package]
name = "cdir"
version = "1.0.0"
edition = "2024"
repository = "https://github.com/AmadeusITGroup/cdir"

[dependencies]
chrono = { version = "0.4.42", features = ["clock"] }
clap = { version = "4.5.48", features = ["derive"] }
color-eyre = "0.6.5"
crossterm = {version = "0.28.1", features = ["event-stream"]}
log = "0.4.22"
ratatui = "0.29.0"
rusqlite = { version = "0.37.0", features = ["bundled"] }
tempfile = "3.14.0"
dirs = "5.0.1"
log4rs = "1.3.0"
serde = "1.0.216"
serde_yaml = "0.9.34"
tui-textarea = "0.7.0"
dark-light = { git = "https://github.com/rust-dark-light/dark-light.git", rev = "0f18d2fbcaa5d1c175db8aae7d53428988d7e961" }
nucleo-matcher = "0.3.1"
tokio = {version="1.49.0", features=["full"]}
tokio-stream = {version="0.1.18", features = ["sync"]}
log4rs_test_utils = "0.2.3"
yamlpatch = "0.11.0"
yamlpath = "0.33.0"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[profile.release]
codegen-units = 1 # Allows compiler to perform better optimization.
lto = true # Enables Link-time Optimization.
opt-level = "s" # Prioritizes small binary size. Use `3` if you prefer speed.
strip = true # Ensures debug symbols are removed.
